welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:4: error: ')' expected but '}' found.
    case true => if (die1==die2) {return (die2 + ((die1%6)+1)} else 
                                                             ^